<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".activity.PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
...
        android:layout_marginEnd="40dp"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/relative_layout_for_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gredient_bg">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_shuffle"
            android:src="@drawable/ic_baseline_shuffle_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/replay_5"
            android:src="@drawable/ic_baseline_replay_5_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_prev"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/play_pause"
            android:layout_marginEnd="16dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_next"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/forward_5"
            android:src="@drawable/ic_baseline_forward_5_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_repeat"
            android:src="@drawable/ic_baseline_repeat_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            />
    </RelativeLayout>
...
