...
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="LogIn"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Email"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14dp" />


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Password"
                android:inputType="textPassword"
...
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorGray02"
                    android:textStyle="bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_login"
                android:stateListAnimator="@null"
                android:text="LogIn"
...
