<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="Delete"
        android:id="@+id/delete"
        app:showAsAction="never"/>
    <item
        android:title="Share"
        android:id="@+id/share"
        app:showAsAction="never"/>
</menu>